--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -680,7 +680,7 @@ form {
 
 label, input {
     width: 100%;
-    font-size: 20px;
+    font-size: var(--fs-text);
     margin: 5px 0;
 }
 
@@ -695,8 +695,9 @@ input:nth-child(4){
 textarea {
     width: 100%;
     height: 200px;
-    font-size: 20px;
+    font-size: var(--fs-text);
     padding: 15px;
+    resize: none;
 }
 label:nth-child(5){
     margin-bottom: 10px;
@@ -706,15 +707,16 @@ label:nth-child(5){
     display: block;
     margin: 20px auto;
     padding: 10px;
-    font-size: 18px;
+    font-size: var(--fs-text);
     width: 250px;
     border-radius: 5px;
     border: 1px solid #333;
 }
 
-@media screen and (max-width: 1100px){
-    #contact {
-        width: 80%;
+@media screen and (max-width: 550px) {
+    .form-btn
+    {
+        width: 180px;
     }
 }
 
