--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,10 +145,12 @@ nav a:hover {
         position: absolute;
         right: 0;
         top: 15px;
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         background: url(../img/croix_menu.png);
         background-size: 30px;
+        background-color: gray;
+        border-radius: 50%;
         z-index: 1;
         background-repeat: no-repeat;
         background-position: center;
